plugins {
    alias(libs.plugins.android.application)
    id 'com.google.gms.google-services'
    id 'androidx.navigation.safeargs'
}

android {
    namespace 'com.dmy.foodplannerapp'
    compileSdk {
        version = release(36)
    }

    buildFeatures {
        viewBinding true
    }

    defaultConfig {
        applicationId "com.dmy.foodplannerapp"
        minSdk 24
        targetSdk 36
        versionCode 1
        versionName "1.0"
        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_11
        targetCompatibility JavaVersion.VERSION_11
    }
}

dependencies {
    implementation libs.appcompat
    implementation libs.material
    implementation libs.activity
    implementation libs.constraintlayout
    implementation platform(libs.firebase.bom)
    implementation libs.firebase.auth
    implementation libs.firebase.analytics
    implementation libs.credentials
    implementation libs.credentials.play.services.auth
    implementation libs.googleid
    implementation libs.fragment
    implementation libs.recyclerview
    implementation libs.navigation.fragment
    implementation libs.navigation.ui
    implementation libs.cardview
    implementation libs.legacy.support.v4
    implementation libs.gridlayout
    testImplementation libs.junit
    androidTestImplementation libs.ext.junit
    androidTestImplementation libs.espresso.core
    implementation libs.lottie
    implementation libs.retrofit
    implementation libs.converter.gson
    implementation libs.room.runtime
    annotationProcessor libs.room.compiler
    implementation libs.glide
    implementation libs.rxandroid
    implementation libs.rxjava
    implementation libs.core
}